syntax = 'proto3';
package user;
option go_package = "./user";

message LoginRequest{
  string Mobile = 1;
  string Password = 2;
}
message LoginResponse{
  int64 Id = 1;
  string name = 2;
  int64 Gender = 3;
  string Mobile = 4;
}

message RegisterRequest{
  string Name = 1;
  int64 Gender = 2;
  string Mobile = 3;
  string Password = 4;
}
message RegisterResponse{
  int64 Id = 1;
  string Name = 2;
  int64 Gender = 3;
  string Mobile = 4;
}

message UserInfoRequest{
  int64 Id =1;
}
message UserInfoResponse{
  int64 Id = 1;
  string Name = 2;
  int64 Gender = 3;
  string Mobile = 4;
}

service USer{
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc UserInfo(UserInfoRequest) returns (UserInfoResponse);
}
